
    o	gzfile() looks at the file header and so can now also open
	bzip2-ed files.  It is planned in future to extend this to
	other forms of compression such as lzma and xz.

    o	There is the new option of save(compress = "bzip2") to use bzip2
	compression (which will be slower, but can give substantially
	smaller files).  load() can read such saves (but only as from
	this version of R).
    o	detach() now has an argument 'character.only' with the same meaning
	as in library() or require().

    o	R CMD INSTALL has a new option --data-compress to control the
	compression used when lazy-loading data.  THe default is
	'gzip': 'bzip2' will give ca 15% better compression at the
	expense of slower installation times.  More methods are
	planned for future releases.


REGULAR EXPRESSIONS

    o	A different regular expression engine is used for basic and
	extended regexps and also for approximate matching.  This is
	based on the TRE library of Ville Laurikari, a modifed copy of
	which is included in the R sources.

	This is often faster, especially in a MBCS locale.

	Some known differences are that it is less tolerant of invalid
	inputs in MBCS locales, and in its interpretation of undefined
	(extended) regexps such as "^*".  Also, the interpretation of
	ranges such as [W-z] in caseless matching is no longer to map
	the range to lower case.

	This engine may in future be used in 'literal' mode for fixed
	= TRUE, and there is a compile-time option in src/main/grep.c
	to do so.

    o	The use of repeated boundary regexps in gsub() and gregexpr() as
	warned about in the help page does not work in this engine (it
	did in the previous one since 2005).

    o	Basic and extended regexps now support same set of options as
	for fixed = TRUE and perl = TRUE, including 'useBytes' and
	support for UTF-8-encoded strings in non-UTF-8 locales.

    o	agrep() now has full support for MBCS locales with a modest
	speed penalty.  This enables help.search() to use approximate